--- a/green.html
+++ b/green.html
@@ -1,5 +1,6 @@
  <head>
- 	<link rel="stylesheet" href="green.css" href="green.js"/>
+ 	<link rel="stylesheet" href="green.css"/>
+ 	<script src="green.js"></script>
 </head>
 
 <p id="title">Remembering the Green Movement </p>
