--- a/green.html
+++ b/green.html
@@ -1,6 +1,6 @@
  <head>
  	<link rel="stylesheet" href="green.css"/>
- 	<script src="green.js"></script>
+ 	<script src="green.css"/>
 </head>
 
 <p id="title">Remembering the Green Movement </p>
