--- a/green.html
+++ b/green.html
@@ -1,6 +1,6 @@
  <head>
  	<link rel="stylesheet" href="green.css"/>
- 	 <script type="text/javascript" src="green.js"/>
+ 	 <script type="text/javascript" src="green.js"></script>
 </head>
 
 <p id="title">Remembering the Green Movement </p>
