--- a/green.html
+++ b/green.html
@@ -1,6 +1,6 @@
  <head>
  	<link rel="stylesheet" href="green.css"/>
- 	 <script type="text/javascript" src="green.js"></script>
+ 	
 </head>
 
 <p id="title">Remembering the Green Movement </p>
@@ -8,7 +8,7 @@
  Over the next six months, the Green Movement evolved from a  mass group of angry voters to a nationwide force demanding the  democratic rights originally sought in the 1979 revolution, rights that were hijacked by radical clerics.
  <br></p>
  <body>
-   
+  <script src="green.js"></script>
  </div>
         <ul class="pull-down">
           <li><a href="#">EN</a><a class=" none#">/</a><a href="#">فارسی‌</a></li>
