--- a/green.html
+++ b/green.html
@@ -8,7 +8,7 @@
  Over the next six months, the Green Movement evolved from a  mass group of angry voters to a nationwide force demanding the  democratic rights originally sought in the 1979 revolution, rights that were hijacked by radical clerics.
  <br></p>
  <body>
- <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+ <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
  <script src="green.js"></script>
  </div>
         <ul class="pull-down">
