--- a/green.html
+++ b/green.html
@@ -1,6 +1,6 @@
  <head>
  	<link rel="stylesheet" href="green.css"/>
- 	
+ 	<meta charset="utf-8">
 </head>
 
 <p id="title">Remembering the Green Movement </p>
@@ -8,8 +8,6 @@
  Over the next six months, the Green Movement evolved from a  mass group of angry voters to a nationwide force demanding the  democratic rights originally sought in the 1979 revolution, rights that were hijacked by radical clerics.
  <br></p>
  <body>
- <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
- <script src="green.js"></script>
  </div>
         <ul class="pull-down">
           <li><a href="#">EN</a><a class=" none#">/</a><a href="#">فارسی‌</a></li>
@@ -34,7 +32,7 @@
  
 <div id="language-selector">
    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script type="text/javascript" src="js/jquery.proximity.js"></script>
+	<script type="text/javascript" src="green.js"></script>
 	<script type="text/javascript">
 		$(function() {
 				
