--- a/Gallery.html
+++ b/Gallery.html
@@ -5,13 +5,13 @@
 <body>
 
 <div class="imageContainer view">
-<img src="https://www.dropbox.com/s/egtvlfkk7qvic81/DP-01.jpg?dl=1" width="345" height="163"/>
+    <img src="https://www.dropbox.com/s/egtvlfkk7qvic81/DP-01.jpg?dl=1" width="345" height="163"/>
   
-<div class="mask">
-    <h2>Transformation of Surface to Volume </h2>
-    <p>Improvisational Theater</p>
-    <a href="#" class="info">Read More</a>
+    <div class="mask">
+        <h2>Transformation of Surface to Volume </h2>
+        <p>Improvisational Theater</p>
+        <a href="#" class="info">Read More</a>
+    </div>
 </div>
-</div>
-  
- 
+
+</body>
