--- a/Gallery.html
+++ b/Gallery.html
@@ -1,16 +1,50 @@
 <head>
     <link rel="stylesheet" href="Gallery.css"/>
 </head>
-<p id="title">Saba Yazdjerdi</p>
-<body>
 
-<div class="imageContainer view">
-    <img src="https://www.dropbox.com/s/egtvlfkk7qvic81/DP-01.jpg?dl=1" width="345" height="163"/>
-  
+<body>
+<img id="background" src="https://www.dropbox.com/s/3yvleqvupw6ikmt/background.jpg?dl=1" />
+<p id="title">Saba Yazdjerdi</p>
+<div class="imageContainerTop view">
+    <img src="https://www.dropbox.com/s/efttlo513ww26yh/DP.jpg?dl=1" width="357" height="205"/>
     <div class="mask">
-        <h2>Transformation of Surface to Volume </h2>
+        <a href="#" class="info">Transformation of Surface to Volume</a>
         <p>Improvisational Theater</p>
-        <a href="#" class="info">Read More</a>
+    </div>
+</div>
+<div class="imageContainer view">
+    <img src="https://www.dropbox.com/s/lg7q62kdknhlhb4/Projection-01.jpg?dl=1" width="357" height="205"/>
+    <div class="mask">
+        <a href="#" class="info">Spatial Reproduction</a>
+        <p>Architectural Projection</p>
+    </div>
+</div>
+<div class="imageContainer view">
+    <img src="https://www.dropbox.com/s/k76sm0cs9xuhw73/AD-01.jpg?dl=1" width="357" height="205"/>
+    <div class="mask">
+        <a href="#" class="info">Folding Dynamics</a>
+        <p>Providence Exchange Gateway Station</p>
+    </div>
+</div>
+<div class="imageContainer view">
+    <img src="https://www.dropbox.com/s/vvz9yp0hv2oi3aj/Analysis-01.jpg?dl=1" width="357" height="205"/>
+    <div class="mask">
+        <a href="#" class="info">Reading Architecture</a>
+        <p>Architectural Analysis</p>
+    </div>
+</div>
+<div class="imageContainerMidLeft view">
+    <img src="https://www.dropbox.com/s/ngl0yd58mitzjgi/UD-01.jpg?dl=1" width="357" height="205"/>
+    <div class="mask">
+        <a href="#" class="info">Contextualization </a>
+        <p>Boston, West End housing; <br> divulging waterfront to west end</br></p>
+    </div>
+</div>
+<div class="imageContainerMidRight view">
+    <img src="https://www.dropbox.com/s/b1fd74a5una085d/decod-01.jpg?dl=1" width="357" height="205"/>
+    <div class="mask">
+        <a href="#" class="info">Parametric and Algorithmic</a>
+        <p>West End contemporary icon project</p>
     </div>
 </div>
 
